<resources>
    <string name="app_name">Family Map</string>
    <string name="login_title">Family Map.</string>
    <string name="server_host_label">Server Host:</string>
    <string name="server_port_label">Server Port:</string>
    <string name="user_name_label">User Name:</string>
    <string name="password_label">Password:</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="email_label">Email:</string>
    <string name="gender_label">Gender:</string>
    <string name="title_activity_maps">Map</string>


</resources>
