<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="70dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/server_host_label" />

            <EditText
                android:id="@+id/serverHostText"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/server_port_label" />

            <EditText
                android:id="@+id/serverPortText"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/user_name_label" />

            <EditText
                android:id="@+id/userNameText"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/password_label" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name_label" />

            <EditText
                android:id="@+id/firstNameText"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name_label" />

            <EditText
                android:id="@+id/lastNameText"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/email_label"/>

            <EditText
                android:id="@+id/emailText"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="7dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="12dp"
                android:layout_height="40dp" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:text="@string/gender_label" />

            <Space
                android:layout_width="25dp"
                android:layout_height="40dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/byutv"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/kbyu"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:text="Female" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="40dp" />

                <RadioButton
                    android:id="@+id/byutv"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:text="Male" />
            </RadioGroup>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SIGN IN" />

            <Space
                android:layout_width="50dp"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="REGISTER" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>